--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
   <h2>The following errors prevented the article from being created.</h2>
@@ -21,8 +21,6 @@
   <p>
     <%= f.submit %>
   </p>
-
-
+  
   <%= link_to 'Back to all articles', articles_path %>
-
 <% end %>
