--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -27,6 +27,7 @@ html, body {
   padding: 0 40px;
   background-color: #2c3e50;
   margin-bottom: 0;
+  border-radius: 0;
 }
  
 .navbar-buttons {
@@ -116,7 +117,7 @@ html, body {
 .overlay ul li a:after {
   content: '';
   position: absolute;
-  top: 50%;
+  bottom: 0;
   left: 43.5%;
   width: 0%;
   transform: translateX(-50%);
@@ -128,13 +129,13 @@ html, body {
 .overlay ul li a:hover,
 .overlay ul li a:focus,
 .overlay ul li a:active {
-  color: #ea2e49;
+  color: #9b59b6;
 }
 .overlay ul li a:hover:after,
 .overlay ul li a:focus:after,
 .overlay ul li a:active:after {
   width: 100%;
-  background: #ea2e49;
+  background: #9b59b6;
 }
 
 .overlay.open li {
@@ -189,6 +190,10 @@ button:focus {
   }
 }
 
+.logo {
+  width: 65px;
+  height: auto;
+}
 .jumbotron {
   background-color: #3498db;
   color: white;
@@ -233,4 +238,9 @@ footer {
       margin-left: 15px;
     }
   }
+}
+
+.page-title {
+  text-align: center;
+  margin-bottom: 30px;
 }
