--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <%= link_to root_path do %>
-  <img class="logo" src="../../assets/images/logo.png" alt="blog-log"/>
+  <%= image_tag "logo.png", alt: "blog-log", class: "logo" %>
   <% end %>
   <div class="navbar-buttons">
     <button class="button" type="button" name="button">SIGN IN</button>
