--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,6 +48,8 @@ html, body {
   border: none;
   border-radius: 20px;
   cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .overlay {
@@ -215,6 +217,30 @@ button:focus {
   }
 }
 
+.button-primary {
+    background-color: transparent;
+    color: #9A5CB4;
+    border-radius: 20px;
+    cursor: pointer;
+    border: 2px solid #9A5CB4;
+    &:hover {
+      background-color: #9A5CB4;
+      color: #fff;
+    }
+}
+
+.button-success {
+    background-color: transparent;
+    color: #2ecc71;
+    border-radius: 20px;
+    cursor: pointer;
+    border: 2px solid #2ecc71;
+    &:hover {
+      background-color: #2ecc71;
+      color: #fff;
+    }
+}
+
 .center {
   text-align: center;
 }
@@ -243,4 +269,9 @@ footer {
 .page-title {
   text-align: center;
   margin-bottom: 30px;
+}
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
 }
