--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,15 @@
-<h1><%= @article.title %></h1>
+<h1 class="page-title"><%= @article.title %></h1>
 
-<p>
-  Description: <%= @article.description %>
-</p>
+<blockquote class="col-xs-8 col-xs-offset-2">
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= button_to 'Edit this article', edit_article_path(@article), class: "button button-success pull-left", method: "get" %>
+    <%= button_to 'View all articles', articles_path, class: "button button-primary pull-left", method: "get" %>
+    <%= link_to 'Delete', article_path(@article), method: "delete", 
+                            data: { confirm: "Are you sure you want to delete this article?"}, 
+                            class: "text-danger" %>
+  </div>
+</blockquote>
+  
 
-<%= link_to 'Edit this article', edit_article_path(@article) %> |
-<%= link_to 'Back to all articles', articles_path %>
+
